--- a/fireflies/firefliesEs.css
+++ b/fireflies/firefliesEs.css
@@ -1,8 +1,8 @@
 /*
-  Jos koodi ei pelitä, poista tämä kommentti. Sori, tiedän että on pitkä tiedosto.
+  Remove this comment when you add the CSS to your profile.
 
-  Väri pitää vaihtaa kohtiin, joissa lukee "yellow"
-  Eli rivit 35, 1340, 1344
+  To change color of the fireflies, change the word "yellow" (rows 35, 1340, 1344) to the color you want
+   
 */
 
   .firefly {
