--- a/fireflies/firefliesEs.css
+++ b/fireflies/firefliesEs.css
@@ -1,4 +1,7 @@
 /*
+  More profile stuff: https://github.com/Keijukoiso/esProfilePieces
+  For questions and to share ideas contact Keijukoiso on everskies
+
   Remove this comment when you add the CSS to your profile.
 
   To change color of the fireflies, change the word "yellow" (rows 35, 1340, 1344) to the color you want
