--- a/fog/fog.css
+++ b/fog/fog.css
@@ -18,17 +18,17 @@ pointer-events: none;
 }
 
 .fog {
-height: 100%;
-width: 120vw;
+min-width: 2000px;
 position: relative;
 animation-name: fog;
 animation-duration: 8s; 
 animation-direction: alternate;
 animation-iteration-count: infinite;
-animation-timing-function:linear
+animation-timing-function: linear
 }
 
 @keyframes fog {
     from {right: 0px;}
     to {right: 50px; }
   }
+
